Removed write_file_header

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -3,3 +3,4 @@
 contracts_overview_file = contracts_overview.json
 output_path = ./output
 contracts_list_file = /tmp/address-list.out
+solmetant = solmetant.csv
