--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,6 +1,12 @@
 
 [DEFAULT]
-contracts_overview_file = contracts_overview.json
+etherChain_fn = etherChain_fn.json
+
+; File that lists the ethereum contract addresses
+hardcode_addresses_fn = ./hardcode_addresses.in 
+
+; The join result is named SMEC (SolMet and EtherChain).
+smec_fn = smec.csv 
+
 output_path = ./output
-contracts_list_file = /tmp/address-list.out
-smec_fn = smec.csv
+
