--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,11 +1,12 @@
 
 [DEFAULT]
+; File that has the etherChain metrics such as compiler_version, firstseen, lastseen
 etherChain_fn = etherChain_fn.json
 
-; File that lists the ethereum contract addresses
+; File that lists the hardcode ethereum contract addresses
 hardcode_addresses_fn = ./hardcode_addresses.in 
 
-; The join result is named SMEC (SolMet and EtherChain).
+; File that has the join result. SMEC (SolMet and EtherChain).
 smec_fn = smec.csv 
 
 output_path = ./output
