--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,10 +1,10 @@
 
 [DEFAULT]
 ; File that has the etherChain metrics such as compiler_version, firstseen, lastseen
-etherChain_fn = etherChain_fn.json
+etherChain_fn = /tmp/etherChain_fn.json
 
 ; File that has the join result. SMEC (SolMet and EtherChain).
 smec_fn = smec.csv 
 
-output_path = ./output
+output_path = /tmp/
 
